--- a/serde_with/Cargo.toml
+++ b/serde_with/Cargo.toml
@@ -145,3 +145,13 @@ rustdoc-args = [
     # https://github.com/rust-lang/rust/pull/84176
     "-Zunstable-options", "--generate-link-to-definition"
 ]
+
+[package.metadata.release]
+pre-release-replacements = [
+    {file = "CHANGELOG.md", search = "\\[Unreleased\\]", replace = "[Unreleased]\n\n## [{{version}}] - {{date}}"},
+    {file = "src/lib.rs", search = "https://docs\\.rs/serde_with/[\\d.]+/", replace = "https://docs.rs/serde_with/{{version}}/"},
+    {file = "README.md", search = "https://docs\\.rs/serde_with/[\\d.]+/", replace = "https://docs.rs/serde_with/{{version}}/"},
+]
+tag = true
+tag-message = "{{crate_name}} v{{version}}"
+tag-name = "v{{version}}"
