--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -61,7 +61,7 @@ jobs:
         # It is good to test more than the MSRV and stable since sometimes
         # breakage occurs in intermediate versions.
         # IMPORTANT: Synchronize the MSRV with the Cargo.toml values.
-        rust: ["1.60", "stable", "beta", "nightly"]
+        rust: ["1.60", "1.65", "stable", "beta", "nightly"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
@@ -71,6 +71,13 @@ jobs:
           toolchain: ${{ matrix.rust }}
           # Extra toolchain to test no_std
           target: thumbv7em-none-eabihf
+
+      # Test that the project also compiles with the newest dependencies.
+      # On nightly there is little cache reuse, so there is not much overhead
+      # in constantly updating the versions.
+      - name: Bump dependencies on nightly
+        if: matrix.rust == 'nightly'
+        run: cargo update
 
       # Build the project
       - name: "Build (${{ matrix.os }} / ${{ matrix.rust }})"
@@ -102,7 +109,7 @@ jobs:
         run: cargo test --all-features --no-default-features --no-fail-fast
 
       - name: Run cargo-tarpaulin
-        if: matrix.rust == 'stable'  && matrix.os == 'ubuntu-latest'
+        if: matrix.rust == 'stable' && matrix.os == 'ubuntu-latest'
         run: |
           cargo install cargo-tarpaulin
           cargo tarpaulin --out Xml --workspace --all-features -- --test-threads=1
