--- a/serde_with/Cargo.toml
+++ b/serde_with/Cargo.toml
@@ -66,6 +66,7 @@ time_0_3 = ["dep:time_0_3"]
 base64 = {version = "0.21.0", optional = true, default-features = false}
 chrono_0_4 = {package = "chrono", version = "0.4.20", optional = true, default-features = false, features = ["serde"]}
 doc-comment = {version = "0.3.3", optional = true}
+hashbrown = {version = "0.14.0", optional = true, features = ["serde"]}
 hex = {version = "0.4.3", optional = true, default-features = false}
 indexmap_1 = {package = "indexmap", version = "1.8", optional = true, default-features = false, features = ["serde-1"]}
 indexmap_2 = {package = "indexmap", version = "2.0", optional = true, default-features = false, features = ["serde"]}
@@ -111,6 +112,11 @@ required-features = ["chrono_0_4", "macros"]
 name = "hex"
 path = "tests/hex.rs"
 required-features = ["hex", "macros"]
+
+[[test]]
+name = "hashbrown"
+path = "tests/hashbrown.rs"
+required-features = ["hashbrown", "macros"]
 
 [[test]]
 name = "indexmap_1"
