--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,14 @@ members = [
 ]
 resolver = "2"
 
+[workspace.package]
+edition = "2021"
+license = "MIT OR Apache-2.0"
+readme = "README.md"
+repository = "https://github.com/jonasbb/serde_with/"
+rust-version = "1.64"
+version = "3.2.0"
+
 [workspace.metadata.release]
 consolidate-commits = true
 pre-release-commit-message = "Bump version to v{{version}}"
