--- a/serde_with_macros/Cargo.toml
+++ b/serde_with_macros/Cargo.toml
@@ -1,17 +1,18 @@
 [package]
 authors = ["Jonas Bushart"]
 name = "serde_with_macros"
-rust-version = "1.64"
-version = "3.2.0"
 
 categories = ["encoding"]
 description = "proc-macro library for serde_with"
 documentation = "https://docs.rs/serde_with_macros/"
-edition = "2021"
 keywords = ["serde", "utilities", "serialization", "deserialization"]
-license = "MIT OR Apache-2.0"
-readme = "README.md"
-repository = "https://github.com/jonasbb/serde_with/"
+
+edition.workspace = true
+license.workspace = true
+readme.workspace = true
+repository.workspace = true
+rust-version.workspace = true
+version.workspace = true
 
 include = [
     "src/**/*",
