--- a/serde_with/Cargo.toml
+++ b/serde_with/Cargo.toml
@@ -141,7 +141,7 @@ schemars_0_8 = {package = "schemars", version = "0.8.16", optional = true, defau
 expect-test = "1.3.0"
 fnv = "1.0.6"
 glob = "0.3.0"
-jsonschema = "0.17.1"
+jsonschema = { version = "0.17.1", default-features = false, features = ["resolve-file"] }
 mime = "0.3.16"
 pretty_assertions = "1.4.0"
 regex = {version = "1.9.1", default-features = false, features = ["std"]}
@@ -153,7 +153,6 @@ serde_json = {version = "1.0.25", features = ["preserve_order"]}
 serde_test = "1.0.124"
 serde_yaml = "0.9.2"
 serde-xml-rs = "0.6.0"
-trybuild = "1.0.85"
 version-sync = "0.9.1"
 
 # There is a change that breaks some tests, starting with 0.8.9.
