--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,17 @@ sign-tag = true
 tag = false
 
 [workspace.lints.rust]
+missing_docs = "warn"
+rust_2018_idioms = "warn"
+trivial_casts = "warn"
+trivial_numeric_casts = "warn"
+unused_extern_crates = "warn"
+unused_import_braces = "warn"
+unused_qualifications = "warn"
+variant_size_differences = "warn"
 
 [workspace.lints.clippy]
+# alloc_instead_of_core = "warn"
 # Checks for usage of `cloned()` on an `Iterator` or `Option` where `copied()` could be used instead.
 cloned_instead_of_copied = "warn"
 # Checks for literal calls to `Default::default()`.
@@ -35,3 +44,9 @@ default_trait_access = "warn"
 # doc_markdown = "warn"
 # Checks for closures which only invoke a method on the closure argument and can be replaced by referencing the method directly.
 redundant_closure_for_method_calls = "warn"
+semicolon_if_nothing_returned = "warn"
+# std_instead_of_core = "warn"
+# std_instead_of_alloc = "warn"
+
+[workspace.lints.rustdoc]
+missing_crate_level_docs = "warn"
