--- a/serde_with/Cargo.toml
+++ b/serde_with/Cargo.toml
@@ -49,7 +49,7 @@ std = ["alloc", "serde/std", "chrono_0_4?/clock", "chrono_0_4?/std", "indexmap_1
 
 ## The `guide` feature enables inclusion of this user guide.
 ## The feature only changes the rustdoc output and enables no other effects.
-guide = ["dep:doc-comment", "dep:document-features", "macros", "std"]
+guide = ["dep:document-features", "macros", "std"]
 
 #! # Features
 #!
@@ -129,7 +129,6 @@ time_0_3 = ["dep:time_0_3"]
 [dependencies]
 base64 = { version = "0.22.1", optional = true, default-features = false }
 chrono_0_4 = { package = "chrono", version = "0.4.20", optional = true, default-features = false, features = ["serde"] }
-doc-comment = { version = "0.3.3", optional = true }
 document-features = { version = "0.2.7", optional = true }
 hashbrown_0_14 = { package = "hashbrown", version = "0.14.0", optional = true, default-features = false, features = ["serde"] }
 hashbrown_0_15 = { package = "hashbrown", version = "0.15.0", optional = true, default-features = false, features = ["serde"] }
